Added formatting to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Stan's Cheat Sheets</title>
+        <style>
+            body {font-size: larger; padding-left: 2em;}
+            h1 {margin-bottom: 0px;}
+            h2 {margin-top: 0px;}
+        </style>
     </head>
     <body>
         <h1>Stan's Developer Cheat Sheets<h1>
