--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
             body {font-size: larger; padding-left: 2em;}
             h1 {margin-bottom: 0px;}
             h2 {margin-top: 0px;}
+            #largr {font-size: 1.5em;}
         </style>
     </head>
     <body>
         <h1>Stan's Developer Cheat Sheets<h1>
             <h2>Helpful notes for developers</h2>
-            <p><a href="GitSolo101.html">Git version control when working alone</a> helps you get started creating files on your local computer and syncing them with GitHub. 
+            <p><span id="largr"><a href="GitSolo101.html">Git version control when working alone</a></span> helps you get started creating files on your local computer and syncing them with GitHub. 
                 No collaboration is documented here.</p>
     </body>
 </html>
