Added more formatting to GitSolo.html

--- a/GitSolo101.html
+++ b/GitSolo101.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width">
         <title>GitHub Solo 101</title>
         <style>
-            body {background-color: #c0c0c0; font-size: x-large;}
-            #container {width:1200px; margin-left: auto; margin-right: auto; border-style: solid; border-color: black;}
+            body {background-color: #c0c0c0; font-size: x-large; background-color: cadetblue;}
+            #container {width:1200px; margin-left: auto; margin-right: auto; border-style: solid; border-color: black; background-color: #c0c0c0; padding: 1.5em;}
             h1 {text-align: center; font-size: 2em;}
             p {margin-left: 2em; margin-right: 2em;}
             #indent1 {padding-left: 3em;}
