--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <title>Stan's Cheat Sheets</title>
         <style>
-            body {font-size: larger; padding-left: 2em;}
+            body {font-size: larger; padding-left: 2em; background-color: cadetblue;}
             h1 {margin-bottom: 0px;}
             h2 {margin-top: 0px;}
             #largr {font-size: 1.5em;}
