Fixed gt and lt to html in change origin instr

--- a/GitSolo101.html
+++ b/GitSolo101.html
@@ -40,7 +40,7 @@
                 <li>Type "<span id="bold">git remote add <em>origin</em> https://github.com/&lt;your GitHub account name&gt;/&lt;your repository name&gt;</span>" to tell git the repository name 
                     to update with your files.<br>Note: origin is a variable name that can be anything you like. Just make sure you use it later with "push" or "pull" commands.
                     <br>Substitute your GitHub account name between the slashes after "github.com" and your GitHub repository name after the last slash.<br>
-                    To change the origin repository use this command: git remote set-url <remote_name> <remote_url> (where remote-name is typically "origin")</li>
+                    To change the origin repository use this command: git remote set-url &lt;remote_name&gt; &lt;remote_url&gt; (where remote-name is typically "origin")</li>
                 <li>Type "<span id="bold">git branch -M main</span>" to tell git to update the main branch.</li>
                 <li>type "<span id="bold">git push -u <em>origin</em> main</span>" to update the GitHub repository with your (committed) files.<br>Be sure to use the same name for "origin" that you 
                     used in the "git remote add" command.</li>
