--- a/GitSolo101.html
+++ b/GitSolo101.html
@@ -49,7 +49,7 @@
         <p>
             Notes:<br>
             To test ssh access to GitHub from Git Bash, type "ssh -T git@github.com".<br>
-            To change the origin repository use this command: "git remote set-url origin &lt;url%gt;" (where origin is customary nickname"). You can also use a different nickname with the new URL.
+            To change the origin repository use this command: "git remote set-url origin &lt;url&gt;" (where origin is customary nickname"). You can also use a different nickname with the new URL.
         </p>
         </div>
     </body>
