--- a/GitSolo101.html
+++ b/GitSolo101.html
@@ -47,9 +47,11 @@
             </ol>
           </p>
         <p>
-            Notes:<br>
-            To test ssh access to GitHub from Git Bash, type "ssh -T git@github.com".<br>
-            To change the origin repository use this command: "git remote set-url origin &lt;url&gt;" (where origin is customary nickname"). You can also use a different nickname with the new URL.
+            Notes:
+            <ul>
+                <li>To test ssh access to GitHub from Git Bash, type "ssh -T git@github.com".</li>
+                <li>To change the origin repository use this command: "git remote set-url origin &lt;url&gt;" (where origin is customary nickname"). 
+                    You can also use a different nickname with the new URL.</li>
         </p>
         </div>
     </body>
