Added commands for verifying ssh access
Added the "git fetch" and "git push" commands to the notes.

--- a/GitSolo101.html
+++ b/GitSolo101.html
@@ -49,7 +49,9 @@
         <p>
             Notes:
             <ul>
-                <li>To test ssh access to GitHub from Git Bash, type "ssh -T git@github.com".</li>
+                <li>To test ssh access to GitHub from Git Bash, type "ssh -T git@github.com" - 
+                    responds "Hi &lt;your github id&gt"! You've successfully authenticated, but GitHub does not provide shell access."<br>
+                    Then type "git fetch" (no output) or "git push" to confirm that everything is up to date.</li>
                 <li>To change the origin repository use this command: "git remote set-url origin &lt;url&gt;" (where origin is customary nickname"). 
                     You can also use a different nickname with the new URL.</li>
         </p>
