Added create repository to assumptions
Added "create repository' to assumptions at top since creating a github repository from git bash is an advanced topic.

--- a/GitSolo101.html
+++ b/GitSolo101.html
@@ -20,7 +20,8 @@
         <div id="container">
           <p>
             When working alone and using GitHub for version control, then following commands will get you through most of what you will be doing.<br>
-            <span id="shrink">(it is assumed that you have created an account on github.com and installed git (git bash on Windows) before starting here)</span>
+            <span id="shrink">(it is assumed that you have created an account on github.com, created a github repository and installed git 
+                (git bash on Windows) before starting here)</span>
             <ol type="1">
                 <li>Create a directory on your local PC and cd into that directory.</li>
                 <li>Type "<span id="bold">git init</span>" to create the files Git will use to track your changes.</li>
