Cleaned up mistakes in the instructions

--- a/exam-steps.html
+++ b/exam-steps.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Learning Github with Stan</title>
+        <title>Bootcamp Exam - Github</title>
         <style>
             body {
                 background-color: darkslateblue;
@@ -42,14 +42,15 @@
             <ul>
                 <li>On your PC change to a high level directory where your git projects with be stored (ie. "cd" - with no parameter, puts you in your home directory.</li>
                 <li>Type "git init" to setup the files Git will need to manage files on your PC.</li>
-                <li>Type "git clone https://github.com/HackerUSA-CE/placement-exam-starter-code" to clone the exam repository.</li>
+                <li>Type "git clone git@github.com:HackerUSA-CE/placement-exam-starter-code.git" to clone the exam repository.</li>
                 <li>Type "cd placement-exam-starter-code</li>
                 <li>Type "git status" to confirm git knows about your files.</li>
-                <li>Type "code ." to start VS Code editor and open the directory you just cloned. (Now change some code. I created a new file "index.html")</li>
-                <li>Type "git status" to see that git has acknowledged your changes and git prompts you to the next step(s).</li>
+                <li>Type "code ." to start VS Code editor and open the directory you just cloned.</li>
                 <li>Modify the code per exam instructions.</li>
+                <li>Type "git status" to see that git has acknowledged your changes and git prompts you to the next step(s).</li>
+                <li>Type "git add" to make git aware of your changes.</li>
                 <li>Type "git commit -m "Your comments describing all your changes so the approver will know what changes to look for."</li>
-                <li>Type "git remote set-url origin https://github.com/&lt;your github name&gt;/myRepository.git" to point to <i>myRepository</i>, under <i>your github name</i>.
+                <li>Type "git remote set-url origin https://github.com/&lt;your github name&gt;/bootCampExam.git" to point to <i>bootCampExam</i>, under <i>your github name</i>.
                      The origin was set to "origin" with the "git clone" command and</li>
                 <li>Type "git push origin main" to send your changes to your github web repository. Since we did not create a branch, you will send your changes to the "main" 
                     branch. Your code changes should now be viewable on github (the web tool.) Be sure to check for errors that would prevent your repository from being updated.</li>
