--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <h1>Stan's Developer Cheat Sheets<h1>
             <h2>Helpful notes for developers</h2>
-            <p><span id="largr"><a href="GitSolo101.html">Git version control when working alone</a></span> helps you get started creating files on your local computer and syncing them with GitHub. 
+            <p><span id="largr"><a href="GitSolo101a.html">Git version control when working alone</a></span> helps you get started creating files on your local computer and syncing them with GitHub. 
                 No collaboration is documented here.</p>
     </body>
 </html>
