--- a/GitSolo101a.html
+++ b/GitSolo101a.html
@@ -48,7 +48,7 @@
                 </ol>
             </div>
             <div id="sync" class="sub">
-                <h2>Now sync the cloud with your changes</h2>
+                <h2>Now update the cloud with your changes</h2>
                 <ol type="1">
                     <li>Now back to your computer.</li>
                     <li>Type "<span id="bold">git remote add <em>origin</em> https://github.com/&lt;your GitHub account name&gt;/&lt;your repository name&gt;</span>" to tell git the repository name 
